Combined travis variables onto single line
One build is triggered for each line in your `env` list.
So, to define multiple variables for a single build, you need to list
all your environment variable key-value pairs as a space-delimited list
on a single entry

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,7 @@ language: node_js
 node_js:
   - 13
 env:
-  - APP_VERSION=0.0.1
-  - DOCKER_REPO=simple-node
+  - APP_VERSION=0.0.1 DOCKER_REPO=simple-node
 
 services:
   - docker
