--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,5 @@ script:
 
 # Tasks to perform after the process is successful. Formatting the Docker username and password as below enables you to programmatically log in without having the password exposed in logs.
 after_success:
-  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - echo $DOCKER_USERNAME
-  - echo $DOCKER_REPO
+  - echo "$DOCKER_PERSONAL_ACCESS_TOKEN" | docker login -u "$DOCKER_USERNAME" --password-stdin
   - docker push $DOCKER_USERNAME/$DOCKER_REPO:$APP_VERSION
