--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: node_js
 node_js:
   - 13
+env:
+  - APP_VERSION=0.0.1 DOCKER_REPO=simple-node
 
 services:
   - docker
@@ -15,9 +17,10 @@ before_script:
 
 script:
   - docker --version # print the version for logging
-  - docker build -t simple-node .
-  - docker tag simple-node YOUR_DOCKER_HUB/simple-node:latest
+  - docker build -t $DOCKER_REPO .
+  - docker tag $DOCKER_REPO $DOCKER_USERNAME/$DOCKER_REPO:$APP_VERSION
 
+# Tasks to perform after the process is successful. Formatting the Docker username and password as below enables you to programmatically log in without having the password exposed in logs.
 after_success:
-  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker push YOUR_DOCKER_HUB/simple-node
+  - echo "$DOCKER_PERSONAL_ACCESS_TOKEN" | docker login -u "$DOCKER_USERNAME" --password-stdin
+  - docker push $DOCKER_USERNAME/$DOCKER_REPO:$APP_VERSION
