--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js:
   - 13
 env:
-  - APP_VERSION=0.0.1 DOCKER_REPO=simple-node
+  - APP_VERSION=0.0.1 DOCKER_REPO=env-var-travis NAME=MYfavINSTRUCTOR
 
 services:
   - docker
@@ -17,8 +17,8 @@ before_script:
 
 script:
   - docker --version # print the version for logging
-  - docker build -t $DOCKER_REPO .
-  - docker tag $DOCKER_REPO $DOCKER_USERNAME/$DOCKER_REPO:$APP_VERSION
+  - make image 
+  - make tag
 
 # Tasks to perform after the process is successful. Formatting the Docker username and password as below enables you to programmatically log in without having the password exposed in logs.
 after_success:
